--- a/main.css
+++ b/main.css
@@ -2,3 +2,35 @@
   width: 100%;
   height: 50vh;
 }
+
+/******************ventana emergente*****************/
+.contenedor {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+}
+.modal {
+  background-color: white;
+  border-radius: 4px;
+  padding: 25px;
+  margin: 10% auto;
+  width: 50%;
+  height: auto;
+}
+.cerrar {
+  width: auto;
+  height: auto;
+  cursor: pointer;
+  background-color: rgba(255, 0, 0, 0.5);
+  padding: 7px;
+  float: right;
+  font-family: "Calibri";
+  font-weight: bold;
+}
+.cerrar:hover {
+  background-color: rgba(255, 0, 0, 1);
+}
