--- a/main.css
+++ b/main.css
@@ -24,7 +24,9 @@ body {
   border-radius: 7px;
   padding: 5px;
 }
-
+.sstyleImg {
+  width: 30%;
+}
 /***********box restaurants*************/
 .estilo {
   border: 2px solid rgb(255, 145, 0);
@@ -32,7 +34,8 @@ body {
   color: rgb(235, 116, 37);
   padding: 7px;
   margin: 7px;
-  width: 350px;
+  width: 90%;
+  height: 20vh;
   font-weight: bold;
   background-color: rgb(214, 205, 205);
 }
