--- a/main.css
+++ b/main.css
@@ -5,6 +5,14 @@
 body {
   background-color: #2B2B2B;
 }
+.style-splash {
+  color: rgb(255, 145, 0);
+  font-weight: bold;
+}
+.vista-splash {
+  height: 100vh;
+  width: 100%;
+}
 /*************title**************/
 .styleTitle {
   width: 100%;
