--- a/main.css
+++ b/main.css
@@ -13,6 +13,14 @@ body {
   height: 100vh;
   width: 100%;
 }
+.style-splash-bg {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
 /*************title**************/
 .styleTitle {
   width: 100%;
