--- a/main.css
+++ b/main.css
@@ -12,6 +12,11 @@ body {
 .vista-splash {
   height: 100vh;
   width: 100%;
+  background-color: black;
+}
+.vista-splash img {
+  height: 20vh;
+  width: auto;
 }
 .style-splash-bg {
   height: 100vh;
